# sneldb

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_IMPROVEMENTS.md  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  pages.yml  rust.yml
clients/javascript/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
clients/javascript/examples/: realworld_scenario.ts
clients/javascript/src/: client.ts  errors.ts  index.ts  parser.ts  types.ts
clients/javascript/tests/: authManager.test.ts  client.test.ts  parser.test.ts  websocket_transport.test.ts
clients/python/: README.md  pyproject.toml
clients/python/examples/: realworld_scenario.py
clients/python/src/sneldb_client/: __init__.py  auth.py  client.py  errors.py  logger.py  parser.py  types.py
clients/python/src/sneldb_client/transport/: __init__.py  base.py  http.py  tcp.py
clients/python/tests/: test_auth.py  test_client.py  test_parser.py
clients/ruby/sneldb-rb/: .gitignore  .rspec_status  Gemfile  README.md
config/: config.development.toml  config.prod.toml  config.test.toml  dev.toml  prod.toml  test.toml
docs/: MULTI_LINK_ISOLATED_PLAN.md  MULTI_LINK_SEQUENCE_IMPLEMENTATION.md  SQL_MIGRATION_ANALYSIS.md  book.toml
docs/book/: 404.html  book.js  commands.html  design.html  index.html  introduction.html  print.html  searchindex.js  toc.html  toc.js
docs/book/commands/: define.html  flush.html  query.html  replay.html  store.html  syntax.html
docs/book/design/: compaction.html  file_formats.html  infrastructure.html  layering_strategy.html  logging.html  overview.html  query_replay.html  sharding.html  storage_engine.html  threading_and_async.html
docs/book/introduction/: key_features.html  what_is_sneldb.html  why_sneldb.html
docs/book/quickstart/: gentle_intro.html  installation.html  philosophy.html  running.html
docs/src/: SUMMARY.md  commands.md  config.md  introduction.md
docs/src/commands/: define.md  flush.md  query.md  remember.md  replay.md  show.md  store.md  syntax.md  user_management.md
docs/src/design/: aggregations.md  compaction.md  file_formats.md  filter_architecture.md  flush_pipeline.md  layering_strategy.md  logging.md  materialization.md  overview.md  query_replay.md  sharding.md  storage_engine.md  streaming_flow.md  threading_and_async.md  wal_archiving.md
docs/src/introduction/: key_features.md  what_is_sneldb.md  why_sneldb.md
docs/src/quickstart/: gentle_intro.md  installation.md  philosophy.md  running.md
docs/theme/: book.js  codedocs.css  sneldb.css  sneldb.js
guide_book/src/: commands.md
guide_book/src/commands/: define.md  replay.md  syntax.md
guide_book/src/design/: compaction.md  infrastructure.md  storage_engine.md
guide_book/src/introduction/: what_is_sneldb.md
guide_book/src/quickstart/: gentle_intro.md
guide_book/theme/: sneldb.css
sneldb-rb/: README.md  sneldb.gemspec
sneldb-rb/examples/: basic_usage.rb
sneldb-rb/lib/sneldb/: client.rb
sneldb-rb/spec/: spec_helper.rb
sneldb-rb/spec/sneldb/: client_spec.rb
src/: lib.rs  logging.rs  main.rs
src/command/: dispatcher.rs  dispatcher_tests.rs  mod.rs  types.rs
src/command/handlers/: auth.rs  auth_test.rs  define.rs  define_tests.rs  flush.rs  flush_tests.rs  kway_merger.rs  kway_merger_test.rs  mod.rs  permissions.rs  permissions_test.rs  ping.rs  ping_tests.rs  query.rs  query_batch_stream.rs  query_batch_stream_test.rs  query_orchestrator.rs  query_tests.rs  remember.rs  remember_tests.rs  replay.rs  replay_tests.rs  rlte_coordinator.rs  rlte_coordinator_test.rs  row_comparator.rs  row_comparator_test.rs  segment_discovery.rs  segment_discovery_test.rs  shard_command_builder.rs  shard_command_builder_test.rs  show.rs  store.rs  store_tests.rs
src/command/parser/: command.rs  error.rs  mod.rs  tokenizer.rs  tokenizer_tests.rs
src/engine/: auth_test.rs  errors.rs  mod.rs
src/engine/auth/: db_ops.rs  db_ops_test.rs  manager.rs  manager_test.rs  mod.rs  permission_ops.rs  permission_ops_test.rs  signature.rs  signature_test.rs  storage.rs  storage_test.rs  types.rs  types_test.rs  user_ops.rs  user_ops_test.rs
src/engine/compactor/: background.rs
src/engine/core/: mod.rs
src/engine/define/: mod.rs  run.rs  run_tests.rs
src/engine/materialize/: error.rs  high_water.rs  high_water_tests.rs  mod.rs  sink.rs  sink_tests.rs  source.rs  source_tests.rs  spec.rs  spec_tests.rs
src/engine/query/: execution_engine.rs  mod.rs  rlte_planner.rs  rlte_planner_tests.rs  scan.rs  scan_test.rs
src/engine/replay/: mod.rs  scan.rs  scan_test.rs
src/engine/schema/: errors.rs  mod.rs  normalization.rs  normalization_test.rs  registery_test.rs  registry.rs  schema_store.rs  schema_store_test.rs  types.rs
src/engine/shard/: context.rs  context_test.rs  flush_progress.rs  flush_progress_test.rs  manager.rs  manager_test.rs  message.rs  mod.rs  types.rs  worker.rs  worker_test.rs
src/engine/store/: insert.rs  mod.rs  (+1 more)
src/frontend/: context.rs  mod.rs  server_state.rs  server_state_test.rs
src/shared/: hash.rs  mod.rs  path.rs  storage_header.rs  storage_header_tests.rs  time.rs  time_tests.rs
tests/: test_runner.rs
tests/helpers/: factory.rs  mod.rs
tests/integration/: auth_helper.rs  config.rs  matcher.rs  mod.rs  runner.rs  scenarios.json  scenarios.rs
(+757 files in other folders)
