[package]
name = "snel_db"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sonic-rs = "0.3"
tracing = "0.1"
anyhow = "1.0"
parking_lot = "0.12"
crossbeam = "0.8"
futures = "0.3"
config = "0.13"
nix = "0.26"
lazy_static = "1.4"
once_cell = "1.18"
glob = "0.3"
tracing-subscriber = { version = "0.3", features = ["fmt", "registry","env-filter"] }
tracing-appender = "0.2"
bloomfilter = { version = "1.0", features = ["serde"] }
bincode = "1.3"
regex = "1.10"
shell-words = "1.1"
prost-reflect = "0.12"
prost-types = "0.12"
base64 = "0.21"
prost = "0.12"
tempfile = "3.8"
prost-build = "0.12"
nom = "7.1.3"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
memmap2 = "0.9.5"
xorfilter-rs = "0.5.1"
xorf = { version = "0.11.0", features = ["serde"] }
rayon = "1.8"
sysinfo = "0.35"
roaring = "0.10"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
crc32fast = "1.3"
louds-rs = "0.7"
lz4_flex = "0.11"
lru = "0.12"
rustc-hash = "1.1"
ahash = "0.8"
async-trait = "0.1"
winnow = "0.6.14"
peg = "0.8"
zstd = "0.13"
rmp-serde = "1.1"

[dev-dependencies]
serde_json = "1.0"
indoc = "2"

[profile.profiling]
inherits = "release"
debug = true

[[bin]]
name = "test_runner"
path = "src/bin/test_runner.rs"

[[bin]]
name = "convertor"
path = "src/bin/convertor.rs"

[[bin]]
name = "stress_tcp"
path = "src/bin/stress_tcp.rs"

[[bin]]
name = "wal_archive_manager"
path = "src/bin/wal_archive_manager.rs"